package com.orbital3d.web.application.database.entity;

// implementation in progress
@SuppressWarnings("unused")
public class Group {
    private Long id;
    private String name;
}
