package com.orbital3d.web.application.database.entity;

// inprogress
@SuppressWarnings("unused")
public class Permission {
    private Long id;
    private String permission;
}
