package com.orbital3d.web.application.service.type;

/**
 * Type marker interface for parent aggregates.
 */
public interface ParentAggregate {
    // Type marker interface.
}
